--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -152,10 +152,10 @@ h5  {-webkit-animation-duration: 1s;
     -moz-animation-duration: 1s;
     -moz-animation-delay: 0.6s;
     -moz-animation-iteration-count: 1;
-    -o-animation-duration: 1s;
+    -o-animation-duration: 3s;
     -o-animation-delay: 0.6s;
     -o-animation-iteration-count: 1;
-    animation-duration: 1s;
+    animation-duration: 5s;
     animation-delay: 0.6s;
     animation-iteration-count: 1;}
 
@@ -166,8 +166,21 @@ h5  {-webkit-animation-duration: 1s;
 }
 
 .btn {background:#b71c1c;
+    -webkit-animation-duration: 3s;
+    -webkit-animation-delay: 2s;
+    -webkit-animation-iteration-count: 1;
+    -moz-animation-duration: 3s;
+    -moz-animation-delay: 2s;
+    -moz-animation-iteration-count: 1;
+    -o-animation-duration: 3s;
+    -o-animation-delay: 2s;
+    -o-animation-iteration-count: 1;
+    animation-duration: 3s;
+    animation-delay: 2s;
+    animation-iteration-count: 1;}
+
     
-}
+
 
 
 /* Representatives Page */
