--- a/assets/css/repStyle.css
+++ b/assets/css/repStyle.css
@@ -100,4 +100,18 @@
 }
 
    
-    
+.twitter    {width:85px;
+  margin:0px 50px;
+  padding:1px;
+  
+  border-radius: 50px;
+  cursor:pointer;
+  transition: background 0.2s, transform 1s 0.1s;
+  }
+
+.twitter:hover  {
+     
+      transform: rotate(360deg);
+}
+
+.btn-color {background:#b71c1c}    
