--- a/assets/css/repStyle.css
+++ b/assets/css/repStyle.css
@@ -103,7 +103,6 @@
 .twitter    {width:85px;
   margin:0px 50px;
   padding:1px;
-  
   border-radius: 50px;
   cursor:pointer;
   transition: background 0.2s, transform 1s 0.1s;
@@ -115,3 +114,27 @@
 }
 
 .btn-color {background:#b71c1c}    
+
+#nyt {position:absolute;
+  margin-left:250px
+     
+      
+      }
+
+h2  {
+  text-align:center;
+  font-family: "roboto";
+      font-size:70px;
+    margin-left:50px}
+    
+    
+#topStories {
+  
+      height: 300px;
+      width: 75%;
+      overflow-y: scroll;
+      overflow-x: auto;
+      margin: 35px auto;
+      text-align:center;}
+
+
