fixes new york times logo

--- a/assets/css/repStyle.css
+++ b/assets/css/repStyle.css
@@ -116,7 +116,8 @@ body {
 .btn-color {background:#b71c1c}    
 
 #nyt {position:absolute;
-  margin-left:250px
+  left:250px
+
      
       
       }
